--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
     "background_color": "#ffffff",
     "description": "550 MCH Lab Data",
     "display": "fullscreen",
-    "theme_color": "#2d6a4f",
+    "theme_color": "#ffffff",
     "icons": [
         {
             "src": "/image/icons/android-icon-36x36.png",
